fixed: container text-alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 #container {
     background-color: rgb(122, 122, 187);
     font-size: 20px;
+    text-emphasis: center;
 }
 
 #container::shadow {
